--- a/inst/doc/pathview.Rnw
+++ b/inst/doc/pathview.Rnw
@@ -37,8 +37,30 @@
 \maketitle
 
 \begin{abstract}
-  In this vignette, we demonstrate the \Rpackage{pathview} package as a tool set for pathway based data integration and visualization. It maps and renders user data on relevant pathway graphs. All users need is to supply their gene or compound data and specify the target pathway. \Rpackage{Pathview} automatically downloads the pathway graph data, parses the data file, maps user data to the pathway, and renders pathway graph with the mapped data. Although built as a stand-alone program, \Rpackage{pathview} may seamlessly integrate with pathway (and functional) analysis tools for a large-scale and fully automated analysis pipeline. In this vignette, we introduce common and advanced uses of \Rpackage{pathview}. We also cover package installation, data preparation, other useful features and common application errors.
+  In this vignette, we demonstrate the \Rpackage{pathview} package as a tool set for pathway based data integration and visualization. It maps and renders user data on relevant pathway graphs. All users need is to supply their gene or compound data and specify the target pathway. \Rpackage{Pathview} automatically downloads the pathway graph data, parses the data file, maps user data to the pathway, and renders pathway graph with the mapped data. Although built as a stand-alone program, \Rpackage{pathview} may seamlessly integrate with pathway (and functional) analysis tools for a large-scale and fully automated analysis pipeline. In this vignette, we introduce common and advanced uses of \Rpackage{pathview}. We also cover package installation, data preparation, other useful features and common application errors. In \Rpackage{gage} package, vignette "RNA-Seq Data Pathway and Gene-set Analysis Workflows" demonstrates GAGE/Pathview workflows on RNA-seq and microarray pathway analysis.
 \end{abstract}
+
+\section{Quick start with demo data}
+\label{sec:quick}
+This is the most basic use of \Rpackage{pathview}, please check the full description below for details. Here we assume that the input data are already read in R as in the demo examples. If you are not sure how to do so, you may check \Rpackage{gage} secondary vignette, "Gene set and data preparation".
+
+<<synopsis1, echo=TRUE,  eval=FALSE>>=
+library(pathview)
+data(gse16873.d)
+pv.out <- pathview(gene.data = gse16873.d[, 1], pathway.id = "04110",
+                   species = "hsa", out.suffix = "gse16873")
+@ 
+
+\section{New features}
+\label{sec:news}
+\Rpackage{Pathview} now can plot/integrate/compare multiple states or samples in the same graph. Please check (Figure \hyperref[fig:multi1]{\ref*{fig:multi1}} - \hyperref[fig:multi2]{\ref*{fig:multi2}} for examples and (\hyperref[subsec:multiple]{Subsection \ref*{subsec:multiple}}) for details.
+\\
+\\
+\Rpackage{Pathview} now can work with all KEGG species (about 2300 to date and more forthcoming) literally. This is important for studies on none model organisms or rare species. In the meantime, Pathview also supported KEGG Orthology (with species="ko"). This makes pathway analysis and visualization feasible with non-KEGG species or metagenomics/microbiome data. Please check (\hyperref[subsec:species]{Subsection \ref*{subsec:species}}) for details.
+\\
+\\
+Graphviz view can automatic choose different types of legends, either on nodes (Figure \hyperref[fig:5b]{\ref*{fig:5b}}), edges  (Figure \hyperref[fig:2]{\ref*{fig:2}}) or both (Figure \hyperref[fig:3]{\ref*{fig:3}}) depending on the specific pathways.
+
 
 \section{Overview}
 \label{sec:overview}
@@ -50,8 +72,9 @@
 
 \Rpackage{Pathview} is open source, fully automated and error-resistant. Therefore, it seamlessly integrates with pathway or gene set analysis tools. In \hyperref[sec:workflow]{Section \ref*{sec:workflow}}, we will show an integrated analysis using \Rpackage{pathview} with anothr the Bioconductor \Rpackage{gage} package \citep{luo:etal:2009}, available from the \href{www.bioconductor.org/packages/release/bioc/html/gage.html}{Bioconductor website}.
 
+Note that although we use microarray data as example gene data in this vignette, Pathview is equally applicable to RNA-Seq data and other types of gene/protein centered high throughput data. The secondary vignette in \Rpackage{gage} package, "RNA-Seq Data Pathway and Gene-set Analysis Workflows", demonstrates such applications.
 
-The vignette is written by assuming the user has minimal R/Bioconductor knowledge. Some descriptions and code chunks cover very basic usage of R. The more experienced users may simply omit these parts. 
+This vignette is written by assuming the user has minimal R/Bioconductor knowledge. Some descriptions and code chunks cover very basic usage of R. The more experienced users may simply omit these parts. 
 
 
 \section{Installation}
@@ -129,6 +152,26 @@ We also load the demo pathway related data.
 data(demo.paths)
 @
 
+First, we view the exprssion changes of a single sample (pair) on a typical signaling pathway, "Cell Cycle", by specifying the \R{gene.data} and \R{pathway.id} (\hyperref[fig:1a]{Figure \ref*{fig:1a}}). The microarray was done on human tissue, hence \R{species = "hsa"}. Note that such native KEGG view was outupt as a raster image in a PNG file in your working directory.
+<<kegg.native, echo=TRUE>>=
+i <- 1
+pv.out <- pathview(gene.data = gse16873.d[, 1], pathway.id = demo.paths$sel.paths[i],
+                   species = "hsa", out.suffix = "gse16873", kegg.native = T)
+list.files(pattern="hsa04110", full.names=T)
+str(pv.out)
+head(pv.out$plot.data.gene)
+@ 
+
+
+Graph from the first example above has a single layer. Node colors were modified on the original graph layer, and original KEGG node labels (node names) were kept intact. This way the output file size is as small as the original KEGG PNG file, but the computing time is relative long. If we want a fast view and do not mind doubling the output file size, we may do a two-layer graph with \R{same.layer = F}  (\hyperref[fig:1b]{Figure \ref*{fig:1b}}). This way node colors and labels are added on an extra layer above the original KEGG graph. Notice that the original KEGG gene labels (or EC numbers) were replaced by official gene symbols.
+<<kegg.native_2layer, echo=TRUE>>=
+pv.out <- pathview(gene.data = gse16873.d[, 1], pathway.id = demo.paths$sel.paths[i],
+                   species = "hsa", out.suffix = "gse16873.2layer", kegg.native = T,
+                   same.layer = F)
+@ 
+
+
+
 \setlength\fboxsep{0pt}
 \setlength\fboxrule{0.5pt}
 \begin{figure}
@@ -152,27 +195,6 @@ data(demo.paths)
         \label{fig:1}
 \end{figure}
 
-First, we view the exprssion changes of a single sample (pair) on a typical signaling pathway, "Cell Cycle", by specifying the \R{gene.data} and \R{pathway.id} (\hyperref[fig:1a]{Figure \ref*{fig:1a}}). The microarray was done on human tissue, hence \R{species = "hsa"}. Note that such native KEGG view was outupt as a raster image in a PNG file in your working directory.
-<<kegg.native, echo=TRUE>>=
-i <- 1
-pv.out <- pathview(gene.data = gse16873.d[, 1], pathway.id = demo.paths$sel.paths[i],
-                   species = "hsa", out.suffix = "gse16873", kegg.native = T)
-list.files(pattern="hsa04110", full.names=T)
-str(pv.out)
-head(pv.out$plot.data.gene)
-@ 
-
-
-Graph from the first example above has a single layer. Node colors were modified on the original graph layer, and original KEGG node labels (node names) were kept intact. This way the output file size is as small as the original KEGG PNG file, but the computing time is relative long. If we want a fast view and do not mind doubling the output file size, we may do a two-layer graph with \R{same.layer = F}  (\hyperref[fig:1b]{Figure \ref*{fig:1b}}). This way node colors and labels are added on an extra layer above the original KEGG graph. 
-<<kegg.native_2layer, echo=TRUE>>=
-pv.out <- pathview(gene.data = gse16873.d[, 1], pathway.id = demo.paths$sel.paths[i],
-                   species = "hsa", out.suffix = "gse16873.2layer", kegg.native = T,
-                   same.layer = F)
-@ 
-
-
-In the above two examples, we view the data on native KEGG pathway graph. This view we get all notes and meta-data on the KEGG graphs, hence the data is more readable and interpretable. However, the output graph is a raster image in PNG format. We may also view the data with a \textit{de novo} pathway graph layout using Graphviz engine  (\hyperref[fig:2]{Figure \ref*{fig:2}}). The graph has the same set of nodes and edges, but with a different layout. We get more controls over the nodes and edge attributes and look. Importantly, the graph is a vector image in PDF format in your working directory. 
-
 
 \begin{figure} 
 \begin{center} 
@@ -181,6 +203,8 @@ In the above two examples, we view the data on native KEGG pathway graph. This v
 \label{fig:2}
 \end{center}  
 \end{figure} 
+
+In the above two examples, we view the data on native KEGG pathway graph. This view we get all notes and meta-data on the KEGG graphs, hence the data is more readable and interpretable. However, the output graph is a raster image in PNG format. We may also view the data with a \textit{de novo} pathway graph layout using Graphviz engine  (\hyperref[fig:2]{Figure \ref*{fig:2}}). The graph has the same set of nodes and edges, but with a different layout. We get more controls over the nodes and edge attributes and look. Importantly, the graph is a vector image in PDF format in your working directory. 
 
 <<graphviz, echo=TRUE>>=
 pv.out <- pathview(gene.data = gse16873.d[, 1], pathway.id = demo.paths$sel.paths[i],
@@ -261,8 +285,10 @@ head(pv.out$plot.data.gene)
 
 \section{Data integration}
 \label{sec:integration}
-\Rpackage{Pathview} provides strong support for data Integration. It can be used to integrate, analyze and visualize a wide variety of biological data: gene expression, protein expression, genetic association, metabolite, genomic data, literature, and other data types mappable to pathways. Notebaly, it can be directly used for metagenomic data when the data are mapped to KEGG ortholog pathways. The integrated Mapper module maps a variety of gene/protein IDs and compound/metabolite IDs to standard KEGG gene or compound IDs. User data named with any of these different ID types get accurately mapped to target KEGG pathways. Currently, \Rpackage{pathview} covers KEGG pathways for over 2000 species, and species can be specified either as KEGG code, scientific name or comon name. In addition, \Rpackage{pathview}  works with different data attributes and formats, both continuous and discrete data, either in matrix or vector format, with single or multiple samples/experiments etc.
+\Rpackage{Pathview} provides strong support for data integration. It can be used to integrate, analyze and visualize a wide variety of biological data (\hyperref[subsec:compound]{Subsection \ref*{subsec:compound}}): gene expression, protein expression, genetic association, metabolite, genomic data, literature, and other data types mappable to pathways. Notebaly, it can be directly used for metagenomic, microbiome or unknown species data when the data are mapped to KEGG ortholog pathways (\hyperref[subsec:species]{Subsection \ref*{subsec:species}}). The integrated Mapper module maps a variety of gene/protein IDs and compound/metabolite IDs to standard KEGG gene or compound IDs (\hyperref[subsec:ids]{Subsection \ref*{subsec:ids}}). User data named with any of these different ID types get accurately mapped to target KEGG pathways. Currently, \Rpackage{pathview} covers KEGG pathways for over 2000 species (\hyperref[subsec:species]{Subsection \ref*{subsec:species}}), and species can be specified either as KEGG code, scientific name or comon name. In addition, \Rpackage{pathview}  works with different data attributes and formats, both continuous and discrete data (\hyperref[subsec:discrete]{Subsection \ref*{subsec:discrete}}), either in matrix or vector format, with single or multiple samples/experiments etc. Partcullary, \Rpackage{Pathview} can now integrate and compare multiple samples or states into one graph (\hyperref[subsec:multiple]{Subsection \ref*{subsec:multiple}}).
 
+\subsection{Compound and gene data}
+\label{subsec:compound}
 In examples above, we viewed  gene data with canonical signaling pathways. We frequently want to look at metabolic pathways too. Besides gene nodes, these pathways also have compound nodes.  Therefore, we may integrate or visualize both gene data and compound data with metabolic pathways. Here gene data is a broad concept including genes, transcripts, protein , enzymes and their expression, modifications and any measurable attributes. Same is compound data, including metabolites, drugs, their measurements and attributes.
 Here we still use the breast cancer microarray dataset as gene data. We then generate simulated compound or metabolomic data, and load proper compound ID types (with sufficient number of unique entries) for demonstration.
 <<dataPrep, echo=TRUE>>=
@@ -312,16 +338,92 @@ pv.out <- pathview(gene.data = gse16873.d[, 1], cpd.data = sim.cpd.data,
         \label{fig:5}
 \end{figure}
 
-In all previous examples, we looked at single sample data, which are either vector or single-column matrix. \Rpackage{Pathview} also handles multiple sample data, generates graph for each sample. It automatically match samples by recycling over the smaller sample size when sample sizes are different for gene and compound data. In the following example (Figure not shown), \R{gene.data} has two samples while \R{cpd.data} has one. Hence \R{cpd.data} is recycled to match the second \R{gene.data} sample in the second graph. To prevent such data matching/recycling, you need to set argument \R{match.data=F}, which is passed to secondary function \R{keggview.native} or \R{keggview.graph} by \R{pathview}.
-<<multisample.gene_cpd.data, echo=TRUE>>=
-head(gse16873.d[, 1:2])
-pv.out <- pathview(gene.data = gse16873.d[, 1:2], cpd.data = sim.cpd.data,
-    pathway.id = demo.paths$sel.paths[i], species = "hsa",
-    out.suffix = "gse16873.cpd", keys.align = "y", kegg.native = T,
-    key.pos = demo.paths$kpos1[i])
-head(pv.out$plot.data.gene)
+\subsection{Multiple states or samples}
+\label{subsec:multiple}
+In all previous examples, we looked at single sample data, which are either vector or single-column matrix. \Rpackage{Pathview} also handles multiple sample data, it used to generate graph for each sample. Since version 1.1.6, \Rpackage{Pathview} can integrate and plot multiple samples or states into one graph (Figure \hyperref[fig:multi1]{\ref*{fig:multi1}} - \hyperref[fig:multi2]{\ref*{fig:multi2}}). 
+
+Let's simulate compound data with multiple replicate samples first.
+<<sim.cpd.data2, echo=TRUE>>=
+set.seed(10)
+sim.cpd.data2 = matrix(sample(sim.cpd.data, 18000, 
+    replace = T), ncol = 6)
+rownames(sim.cpd.data2) = names(sim.cpd.data)
+colnames(sim.cpd.data2) = paste("exp", 1:6, sep = "")
+head(sim.cpd.data2, 3)
 @ 
 
+In the following examples, \R{gene.data} has three samples while \R{cpd.data} has two. We may include all these samples in one graph. We can do either native KEGG view (\hyperref[fig:multi1]{Figure \ref*{fig:multi1}}) or Graphviz view (\hyperref[fig:multi2]{Figure \ref*{fig:multi2}})on such multiple-sample data. In these graphs, we see that the gene nodes and compound nodes are sliced into multiple pieces corresponding to different states or samples. Since the sample sizes are different for \R{gene.data} and \R{cpd.data}, we can choose to match the data if samples in the two data types are actually paired, i.e. first columns of for \R{gene.data} and \R{cpd.data} come from the same experiment/sample, and so on.
+
+<<multisample.gene_cpd.data, echo=TRUE>>=
+#KEGG view
+pv.out <- pathview(gene.data = gse16873.d[, 1:3], 
+    cpd.data = sim.cpd.data2[, 1:2], pathway.id = demo.paths$sel.paths[i], 
+    species = "hsa", out.suffix = "gse16873.cpd.3-2s", keys.align = "y", 
+    kegg.native = T, match.data = F, multi.state = T, same.layer = T)
+head(pv.out$plot.data.cpd)
+#KEGG view with data match
+pv.out <- pathview(gene.data = gse16873.d[, 1:3], 
+    cpd.data = sim.cpd.data2[, 1:2], pathway.id = demo.paths$sel.paths[i], 
+    species = "hsa", out.suffix = "gse16873.cpd.3-2s.match", 
+    keys.align = "y", kegg.native = T, match.data = T, multi.state = T, 
+    same.layer = T)
+#graphviz view
+pv.out <- pathview(gene.data = gse16873.d[, 1:3], 
+    cpd.data = sim.cpd.data2[, 1:2], pathway.id = demo.paths$sel.paths[i], 
+    species = "hsa", out.suffix = "gse16873.cpd.3-2s", keys.align = "y", 
+    kegg.native = F, match.data = F, multi.state = T, same.layer = T)
+@
+
+\begin{figure}
+        \centering
+        \begin{subfigure}[b]{1.0\textwidth}
+                \centering
+                \fbox{\includegraphics[width=15cm,type=png,ext=.png,read=.png]{hsa00640.gse16873.cpd.3-2s.multi}}
+                \caption{}
+                \label{fig:multi1a}
+        \end{subfigure}
+        \\
+        \vspace{20pt}
+        \begin{subfigure}[b]{1.0\textwidth}
+                \centering
+                \includegraphics[width=15cm,type=png,ext=.png,read=.png]{hsa00640.gse16873.cpd.3-2s.match.multi}
+                \caption{}
+                \label{fig:multi1b}
+        \end{subfigure}
+        \\
+        \caption{Example KEGG view on multiple states of both gene data and compound data simultaneously (a) without or (b) with matching the samples.}
+        \label{fig:multi1}
+\end{figure}
+
+\begin{figure} 
+\begin{center} 
+\includegraphics[width=16.5cm,type=pdf,ext=.pdf,read=.pdf]{hsa00640.gse16873.cpd.3-2s.multi}
+\caption{Example Graphviz view on multiple states of both gene data and compound data simultaneously.}
+\label{fig:multi2}
+\end{center}  
+\end{figure} 
+
+Again, we may choose to plot the samples separately, i.e. one sample per graph. Note that in this case, the samples in \R{gene.data} and \R{cpd.data} has to be matched as to be assigned to the same graph. Hence, argument \R{match.data} isn't really effective here.
+
+<<multisample.gene_cpd.data.seperate, echo=TRUE, eval=FALSE>>=
+#plot samples/states separately
+pv.out <- pathview(gene.data = gse16873.d[, 1:3], 
+    cpd.data = sim.cpd.data2[, 1:2], pathway.id = demo.paths$sel.paths[i], 
+    species = "hsa", out.suffix = "gse16873.cpd.3-2s", keys.align = "y", 
+    kegg.native = T, match.data = F, multi.state = F, same.layer = T)
+@ 
+
+As described above, KEGG views on the same layer may takes some time. Again, we can choose to do KEGG view with two layers as to speed up the process if we don't mind losing the original KEGG gene labels (or EC numbers).
+<<multisample.gene_cpd.data.2layer, echo=TRUE, eval=FALSE>>=
+pv.out <- pathview(gene.data = gse16873.d[, 1:3], 
+    cpd.data = sim.cpd.data2[, 1:2], pathway.id = demo.paths$sel.paths[i], 
+    species = "hsa", out.suffix = "gse16873.cpd.3-2s.2layer", 
+    keys.align = "y", kegg.native = T, match.data = F, multi.state = T, 
+    same.layer = F)
+@
+
+\subsection{Discrete data}
+\label{subsec:discrete}
 So far, we have been dealing with continuous data. But we often work with discrete data too. For instance, we select list of signficant genes or compound based on some statistics (p-value, fold change etc). The input data can be named vector of two levels, either 1 or 0 (signficant or not), or it can be a shorter list of signficant gene/compound names. In the next two examples, we made both \R{gene.data} and \R{cpd.data} or \R{gene.data} only  (\hyperref[fig:6]{Figure \ref*{fig:6}}) discrete.
 <<discrete.gene_cpd.data, echo=TRUE>>=
 require(org.Hs.eg.db)
@@ -350,6 +452,8 @@ pv.out <- pathview(gene.data = sel.genes, cpd.data = sim.cpd.data,
 \end{figure} 
 
 
+\subsection{ID mapping}
+\label{subsec:ids}
 A distinguished feature of \Rpackage{pathview} is its strong ID mapping capability. The integrated Mapper module maps over 10 types of gene or protein IDs, and 20 types of compound or metabolite IDs to standard KEGG gene or compound IDs, and also maps between these external IDs. In other words, user data named with any of these different ID types get accurately mapped to target KEGG pathways. \Rpackage{Pathview} applies to pathways for over 2000 species, and species can be specified in multiple formats: KEGG code, scientific name or comon name.
 
     The following example makes use of the integrated mapper to map external ID types to standard KEGG IDs automatically  (\hyperref[fig:7]{Figure \ref*{fig:7}}). We only need to specify the external ID types using \R{gene.idtype} and \R{cpd.idtype} arguments. Note that automatic mapping is limited to certain ID types. For details check: \R{gene.idtype.list} and \R{data(rn.list); names(rn.list)}.
@@ -389,8 +493,8 @@ pv.out <- pathview(gene.data = gene.entrez, cpd.data = cpd.kc,
     limit = list(gene = 3, cpd = 3), bins = list(gene = 6, cpd = 6))
 @ 
 
-\section{Working with species}
-\label{sec:species}
+\subsection{Working with species}
+\label{subsec:species}
 Species is a tricky yet important issue when working with KEGG. KEGG has its own dedicated nomenclature and database for species, which includes over 2000 organisms with complete genomes. In other words, gene data for any of these organisms can be mapped, visualized and analyzed using \Rpackage{pathview}. This comprehensive species coverage is a prominent feature of \Rpackage{pathview}'s data integration capacity. However, KEGG does not treat all of these organisms/genomes the same way. KEGG use NCBI GeneID (or Entrez Gene) as the default ID for the most common model animals, including human, mouse, rat etc and a few crops, e.g. soybean, wine grape and maize. On the other hand, KEGG uses Locus tag and other IDs for all others organisms, including animals, plants, fungi, protists, as well as bacteria and archaea.
 
 \Rpackage{Pathview} carries a data matrix \R{korg}, which includes a complete list of supported KEGG species and default gene IDs. Let's explore \R{korg} data matrix as to have some idea on KEGG species and its Gene ID usage.
@@ -461,8 +565,8 @@ cn <- colnames(gse16873)
 hn <- grep('HN',cn, ignore.case =TRUE)
 dcis <- grep('DCIS',cn, ignore.case =TRUE)
 kgs.file <- system.file("extdata", "kegg.sigmet.rda", package = "pathview")
-load(kgs.file)
-gse16873.kegg.p <- gage(gse16873, gsets = kegg.sigmet, 
+data(kegg.gs)
+gse16873.kegg.p <- gage(gse16873, gsets = kegg.gs,
     ref = hn, samp = dcis)
 gse16873.d <- gagePrep(gse16873, ref = hn, samp = dcis)
 sel <- gse16873.kegg.p$greater[, "q.val"] < 0.1 & !is.na(gse16873.kegg.p$greater[, 
