--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+VERSION 1.3.4
+-------------
+
+  o updated bods to included an extra column of id.type, the default
+    gene ID type.
+
+
 VERSION 1.2.4
 -------------
 
