--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+VERSION 1.3.6
+-------------
+
+  o ajusted node x coordinate by +0.5 to better fit the color blocks
+    in 2 layer native kegg views.
+
 VERSION 1.3.4
 -------------
 
