--- a/vignettes/pathview.Rnw
+++ b/vignettes/pathview.Rnw
@@ -395,7 +395,8 @@ pv.out <- pathview(gene.data = gse16873.d[, 1:3],
 pv.out <- pathview(gene.data = gse16873.d[, 1:3], 
     cpd.data = sim.cpd.data2[, 1:2], pathway.id = demo.paths$sel.paths[i], 
     species = "hsa", out.suffix = "gse16873.cpd.3-2s", keys.align = "y", 
-    kegg.native = F, match.data = F, multi.state = T, same.layer = T)
+    kegg.native = F, match.data = F, multi.state = T, same.layer = T,
+    key.pos = demo.paths$kpos2[i], sign.pos = demo.paths$spos[i])
 @
 
 \begin{figure}
